syntax="proto3";

option go_package = "goblog.com/api/feedback";
option java_multiple_files = true;
option java_package = "com.goblog.feedback";
option java_outer_classname = "FeedbackProto";

package feedback;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Feedback {
  int64 id = 1;
  int64 user_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp deleted_at = 6;
}

message CreateFeedbackRequest {
  int64 user_id = 1;
  string content = 2;
}

message DeleteFeedbackRequest {
  int64 id = 1;
}

message ListFeedbacksRequest {
  int64 user_id = 1;
  int64 page = 2;
  int64 per_page = 3;
}

message ListFeedbacksResponse {
  int64 total = 1;
  int64 per_page = 2;
  int64 current_page = 3;
  int64 last_page = 4;
  int64 from = 5;
  int64 to = 6;
  repeated Feedback feedbacks = 7;
}

service FeedbackService {
  rpc CreateFeedback(CreateFeedbackRequest) returns (Feedback) {}

  rpc DeleteFeedback(DeleteFeedbackRequest) returns (google.protobuf.Empty) {}

  rpc ListFeedbacks(ListFeedbacksRequest) returns (ListFeedbacksResponse) {}
}